# os-resources-ui

./: README.md  README.rst  setup.cfg
os_resources_ui/enabled/: _1066_ng_os_resources_ui.py
os_resources_ui/static/app/core/instances/: drawer.controller.js  drawer.html  instance-status.service.js  instances.module.js  instances.module.spec.js
os_resources_ui/static/app/resources/: resources.module.js
os_resources_ui/static/app/resources/os-cinder-snapshots/: drawer.html  os-cinder-snapshots.module.js
os_resources_ui/static/app/resources/os-cinder-volumes/: drawer.html  os-cinder-volumes.module.js  volumes.module.js
os_resources_ui/static/app/resources/os-glance-image/: os-glance-image.module.js
os_resources_ui/static/app/resources/os-horizon/: os-horizon.module.js  server-side-action.service.js
os_resources_ui/static/app/resources/os-horizon-django/: actions.service.js  django-actions.service.js  os-horizon-django.module.js
os_resources_ui/static/app/resources/os-neutron-floatingip/: drawer.html  os-neutron-floatingip.module.js
os_resources_ui/static/app/resources/os-neutron-nets/: drawer.html  os-neutron-nets.module.js
os_resources_ui/static/app/resources/os-neutron-ports/: drawer.html  os-neutron-ports.module.js
os_resources_ui/static/app/resources/os-neutron-router/: os-neutron-router.module.js
os_resources_ui/static/app/resources/os-neutron-routers/: drawer.html  os-neutron-router.module.js
os_resources_ui/static/app/resources/os-neutron-securitygroups/: drawer.html  os-neutron-securitygroups.module.js
(+65 files in other folders)
